--- a/Mapplas/Mapplas/AppsViewController.xib
+++ b/Mapplas/Mapplas/AppsViewController.xib
@@ -42,6 +42,8 @@
 						<int key="NSvFlags">274</int>
 						<string key="NSFrameSize">{320, 416}</string>
 						<reference key="NSSuperview" ref="979818913"/>
+						<reference key="NSWindow"/>
+						<reference key="NSNextKeyView"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<object class="NSColor" key="IBUIBackgroundColor">
 							<int key="NSColorSpace">3</int>
@@ -60,6 +62,7 @@
 				</array>
 				<string key="NSFrame">{{0, 64}, {320, 416}}</string>
 				<reference key="NSSuperview"/>
+				<reference key="NSWindow"/>
 				<reference key="NSNextKeyView" ref="876642731"/>
 				<string key="NSReuseIdentifierKey">_NS:9</string>
 				<object class="NSColor" key="IBUIBackgroundColor">
@@ -84,6 +87,8 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{76, 26}, {216, 21}}</string>
 						<reference key="NSSuperview" ref="942826107"/>
+						<reference key="NSWindow"/>
+						<reference key="NSNextKeyView"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<object class="NSColor" key="IBUIBackgroundColor">
 							<int key="NSColorSpace">1</int>
@@ -119,6 +124,7 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{20, 21}, {30, 30}}</string>
 						<reference key="NSSuperview" ref="942826107"/>
+						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="446311454"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIUserInteractionEnabled">NO</bool>
@@ -131,6 +137,7 @@
 				</array>
 				<string key="NSFrameSize">{320, 72}</string>
 				<reference key="NSSuperview"/>
+				<reference key="NSWindow"/>
 				<reference key="NSNextKeyView" ref="661515796"/>
 				<string key="NSReuseIdentifierKey">_NS:9</string>
 				<object class="NSColor" key="IBUIBackgroundColor">
@@ -146,6 +153,8 @@
 				<array class="NSMutableArray" key="NSSubviews"/>
 				<string key="NSFrameSize">{320, 72}</string>
 				<reference key="NSSuperview"/>
+				<reference key="NSWindow"/>
+				<reference key="NSNextKeyView"/>
 				<string key="NSReuseIdentifierKey">_NS:9</string>
 				<object class="NSColor" key="IBUIBackgroundColor">
 					<int key="NSColorSpace">3</int>
@@ -163,6 +172,7 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{0, 67}, {320, 320}}</string>
 						<reference key="NSSuperview" ref="653509800"/>
+						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="89528161"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIUserInteractionEnabled">NO</bool>
@@ -177,6 +187,7 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{0, 67}, {320, 320}}</string>
 						<reference key="NSSuperview" ref="653509800"/>
+						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="402594122"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIUserInteractionEnabled">NO</bool>
@@ -191,6 +202,7 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{0, 67}, {320, 320}}</string>
 						<reference key="NSSuperview" ref="653509800"/>
+						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="320413474"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIUserInteractionEnabled">NO</bool>
@@ -205,6 +217,7 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{0, 67}, {320, 320}}</string>
 						<reference key="NSSuperview" ref="653509800"/>
+						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="684940575"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIUserInteractionEnabled">NO</bool>
@@ -219,6 +232,7 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{0, 67}, {320, 320}}</string>
 						<reference key="NSSuperview" ref="653509800"/>
+						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="924377292"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIUserInteractionEnabled">NO</bool>
@@ -233,6 +247,7 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{134, 205}, {47, 21}}</string>
 						<reference key="NSSuperview" ref="653509800"/>
+						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="559612058"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIOpaque">NO</bool>
@@ -240,7 +255,7 @@
 						<int key="IBUIContentMode">7</int>
 						<bool key="IBUIUserInteractionEnabled">NO</bool>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
-						<string key="IBUIText">Lat</string>
+						<string key="IBUIText"/>
 						<object class="NSColor" key="IBUITextColor">
 							<int key="NSColorSpace">1</int>
 							<bytes key="NSRGB">MCAwLjYgMC44AA</bytes>
@@ -267,13 +282,15 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{134, 227}, {47, 21}}</string>
 						<reference key="NSSuperview" ref="653509800"/>
+						<reference key="NSWindow"/>
+						<reference key="NSNextKeyView"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIOpaque">NO</bool>
 						<bool key="IBUIClipsSubviews">YES</bool>
 						<int key="IBUIContentMode">7</int>
 						<bool key="IBUIUserInteractionEnabled">NO</bool>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
-						<string key="IBUIText">Long</string>
+						<string key="IBUIText"/>
 						<object class="NSColor" key="IBUITextColor">
 							<int key="NSColorSpace">1</int>
 							<bytes key="NSRGB">MCAwLjYgMC44AA</bytes>
@@ -289,6 +306,7 @@
 				</array>
 				<string key="NSFrameSize">{320, 480}</string>
 				<reference key="NSSuperview"/>
+				<reference key="NSWindow"/>
 				<reference key="NSNextKeyView" ref="406616867"/>
 				<string key="NSReuseIdentifierKey">_NS:9</string>
 				<object class="NSColor" key="IBUIBackgroundColor">
@@ -569,7 +587,87 @@
 			<nil key="sourceID"/>
 			<int key="maxID">80</int>
 		</object>
-		<object class="IBClassDescriber" key="IBDocument.Classes"/>
+		<object class="IBClassDescriber" key="IBDocument.Classes">
+			<array class="NSMutableArray" key="referencedPartialClassDescriptions">
+				<object class="IBPartialClassDescription">
+					<string key="className">AppsViewController</string>
+					<string key="superclassName">UIViewController</string>
+					<dictionary class="NSMutableDictionary" key="outlets">
+						<string key="cellLoading">UIView</string>
+						<string key="cellLoadingEmpty">UIView</string>
+						<string key="latitudeLabel">UILabel</string>
+						<string key="loading">UIImageView</string>
+						<string key="loadingText">UILabel</string>
+						<string key="longitudeLabel">UILabel</string>
+						<string key="radarAnim">UIView</string>
+						<string key="radarImage1">UIImageView</string>
+						<string key="radarImage2">UIImageView</string>
+						<string key="radarImage3">UIImageView</string>
+						<string key="radarImage4">UIImageView</string>
+						<string key="radarImage5">UIImageView</string>
+						<string key="table">UITableView</string>
+					</dictionary>
+					<dictionary class="NSMutableDictionary" key="toOneOutletInfosByName">
+						<object class="IBToOneOutletInfo" key="cellLoading">
+							<string key="name">cellLoading</string>
+							<string key="candidateClassName">UIView</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="cellLoadingEmpty">
+							<string key="name">cellLoadingEmpty</string>
+							<string key="candidateClassName">UIView</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="latitudeLabel">
+							<string key="name">latitudeLabel</string>
+							<string key="candidateClassName">UILabel</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="loading">
+							<string key="name">loading</string>
+							<string key="candidateClassName">UIImageView</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="loadingText">
+							<string key="name">loadingText</string>
+							<string key="candidateClassName">UILabel</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="longitudeLabel">
+							<string key="name">longitudeLabel</string>
+							<string key="candidateClassName">UILabel</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="radarAnim">
+							<string key="name">radarAnim</string>
+							<string key="candidateClassName">UIView</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="radarImage1">
+							<string key="name">radarImage1</string>
+							<string key="candidateClassName">UIImageView</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="radarImage2">
+							<string key="name">radarImage2</string>
+							<string key="candidateClassName">UIImageView</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="radarImage3">
+							<string key="name">radarImage3</string>
+							<string key="candidateClassName">UIImageView</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="radarImage4">
+							<string key="name">radarImage4</string>
+							<string key="candidateClassName">UIImageView</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="radarImage5">
+							<string key="name">radarImage5</string>
+							<string key="candidateClassName">UIImageView</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="table">
+							<string key="name">table</string>
+							<string key="candidateClassName">UITableView</string>
+						</object>
+					</dictionary>
+					<object class="IBClassDescriptionSource" key="sourceIdentifier">
+						<string key="majorKey">IBProjectSource</string>
+						<string key="minorKey">./Classes/AppsViewController.h</string>
+					</object>
+				</object>
+			</array>
+		</object>
 		<int key="IBDocument.localizationMode">0</int>
 		<string key="IBDocument.TargetRuntimeIdentifier">IBCocoaTouchFramework</string>
 		<object class="NSMutableDictionary" key="IBDocument.PluginDeclaredDependencyDefaults">
