--- a/Mapplas/Mapplas/classes/AppDetailViewController.xib
+++ b/Mapplas/Mapplas/classes/AppDetailViewController.xib
@@ -42,6 +42,7 @@
 				<array class="NSMutableArray" key="NSSubviews"/>
 				<string key="NSFrame">{{0, 44}, {320, 524}}</string>
 				<reference key="NSSuperview"/>
+				<reference key="NSWindow"/>
 				<string key="NSReuseIdentifierKey">_NS:9</string>
 				<object class="NSColor" key="IBUIBackgroundColor" id="922888560">
 					<int key="NSColorSpace">3</int>
@@ -81,6 +82,7 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{7, 7}, {57, 57}}</string>
 						<reference key="NSSuperview" ref="513621850"/>
+						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="239679859"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIUserInteractionEnabled">NO</bool>
@@ -95,6 +97,7 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrameSize">{71, 71}</string>
 						<reference key="NSSuperview" ref="513621850"/>
+						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="470950948"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIUserInteractionEnabled">NO</bool>
@@ -107,8 +110,9 @@
 					<object class="IBUILabel" id="239679859">
 						<reference key="NSNextResponder" ref="513621850"/>
 						<int key="NSvFlags">292</int>
-						<string key="NSFrame">{{78, 11}, {176, 47}}</string>
+						<string key="NSFrame">{{78, 11}, {175, 47}}</string>
 						<reference key="NSSuperview" ref="513621850"/>
+						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="844625673"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIOpaque">NO</bool>
@@ -136,13 +140,14 @@
 							<int key="NSfFlags">16</int>
 						</object>
 						<bool key="IBUIAdjustsFontSizeToFit">NO</bool>
-						<double key="preferredMaxLayoutWidth">176</double>
+						<double key="preferredMaxLayoutWidth">175</double>
 					</object>
 					<object class="IBUIButton" id="248013337">
 						<reference key="NSNextResponder" ref="513621850"/>
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{255, 4}, {64, 64}}</string>
 						<reference key="NSSuperview" ref="513621850"/>
+						<reference key="NSWindow"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIOpaque">NO</bool>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -176,6 +181,7 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{78, 30}, {125, 38}}</string>
 						<reference key="NSSuperview" ref="513621850"/>
+						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="340207784"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<object class="NSColor" key="IBUIBackgroundColor" id="66997051">
@@ -189,6 +195,7 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{78, 30}, {125, 38}}</string>
 						<reference key="NSSuperview" ref="513621850"/>
+						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="248013337"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<reference key="IBUIBackgroundColor" ref="66997051"/>
@@ -215,6 +222,7 @@
 				</array>
 				<string key="NSFrameSize">{320, 71}</string>
 				<reference key="NSSuperview"/>
+				<reference key="NSWindow"/>
 				<string key="NSReuseIdentifierKey">_NS:9</string>
 				<reference key="IBUIBackgroundColor" ref="66997051"/>
 				<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -228,6 +236,7 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{26, 5}, {32, 32}}</string>
 						<reference key="NSSuperview" ref="844944589"/>
+						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="187695586"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIOpaque">NO</bool>
@@ -256,6 +265,7 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{21, 41}, {42, 10}}</string>
 						<reference key="NSSuperview" ref="844944589"/>
+						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="719359121"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIOpaque">NO</bool>
@@ -290,6 +300,7 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{106, 5}, {32, 32}}</string>
 						<reference key="NSSuperview" ref="844944589"/>
+						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="361343481"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIOpaque">NO</bool>
@@ -315,6 +326,7 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{101, 41}, {42, 10}}</string>
 						<reference key="NSSuperview" ref="844944589"/>
+						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="166500941"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIOpaque">NO</bool>
@@ -336,6 +348,7 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{186, 5}, {32, 32}}</string>
 						<reference key="NSSuperview" ref="844944589"/>
+						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="20414453"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIOpaque">NO</bool>
@@ -361,6 +374,7 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{181, 41}, {42, 10}}</string>
 						<reference key="NSSuperview" ref="844944589"/>
+						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="1003728012"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIOpaque">NO</bool>
@@ -382,6 +396,7 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{266, 5}, {32, 32}}</string>
 						<reference key="NSSuperview" ref="844944589"/>
+						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="244704777"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIOpaque">NO</bool>
@@ -407,6 +422,7 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{258, 40}, {49, 10}}</string>
 						<reference key="NSSuperview" ref="844944589"/>
+						<reference key="NSWindow"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIOpaque">NO</bool>
 						<bool key="IBUIClipsSubviews">YES</bool>
@@ -425,6 +441,7 @@
 				</array>
 				<string key="NSFrameSize">{320, 55}</string>
 				<reference key="NSSuperview"/>
+				<reference key="NSWindow"/>
 				<string key="NSReuseIdentifierKey">_NS:9</string>
 				<reference key="IBUIBackgroundColor" ref="66997051"/>
 				<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -438,6 +455,7 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{10, 4}, {302, 20}}</string>
 						<reference key="NSSuperview" ref="53944536"/>
+						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="545054758"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIOpaque">NO</bool>
@@ -469,6 +487,7 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrameSize">{320, 44}</string>
 						<reference key="NSSuperview" ref="53944536"/>
+						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="829430656"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIOpaque">NO</bool>
@@ -498,6 +517,7 @@
 						<int key="NSvFlags">265</int>
 						<string key="NSFrame">{{283, 20}, {38, 10}}</string>
 						<reference key="NSSuperview" ref="53944536"/>
+						<reference key="NSWindow"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIOpaque">NO</bool>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -519,6 +539,7 @@
 				</array>
 				<string key="NSFrameSize">{320, 44}</string>
 				<reference key="NSSuperview"/>
+				<reference key="NSWindow"/>
 				<reference key="NSNextKeyView" ref="353507028"/>
 				<string key="NSReuseIdentifierKey">_NS:9</string>
 				<reference key="IBUIBackgroundColor" ref="66997051"/>
@@ -529,6 +550,7 @@
 				<int key="NSvFlags">274</int>
 				<string key="NSFrameSize">{320, 56}</string>
 				<reference key="NSSuperview"/>
+				<reference key="NSWindow"/>
 				<string key="NSReuseIdentifierKey">_NS:9</string>
 				<reference key="IBUIBackgroundColor" ref="66997051"/>
 				<bool key="IBUIClipsSubviews">YES</bool>
@@ -559,6 +581,7 @@
 								<object class="NSPSMatrix" key="NSFrameMatrix"/>
 								<string key="NSFrame">{{141, 352}, {38, 36}}</string>
 								<reference key="NSSuperview" ref="293154876"/>
+								<reference key="NSWindow"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIOpaque">NO</bool>
 								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -572,6 +595,7 @@
 								<array class="NSMutableArray" key="NSSubviews"/>
 								<string key="NSFrame">{{0, 15}, {320, 330}}</string>
 								<reference key="NSSuperview" ref="293154876"/>
+								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="292483550"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIClipsSubviews">YES</bool>
@@ -583,6 +607,7 @@
 						</array>
 						<string key="NSFrameSize">{320, 395}</string>
 						<reference key="NSSuperview" ref="16484293"/>
+						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="809119614"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<object class="NSColor" key="IBUIBackgroundColor">
@@ -4982,6 +5007,7 @@ AAgAAAAIAAIACAACAAAAAgAAAAEAAQABAAE</bytes>
 				</array>
 				<string key="NSFrameSize">{320, 395}</string>
 				<reference key="NSSuperview"/>
+				<reference key="NSWindow"/>
 				<reference key="NSNextKeyView" ref="293154876"/>
 				<string key="NSReuseIdentifierKey">_NS:9</string>
 				<object class="NSColor" key="IBUIBackgroundColor">
